# libsockets

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
chatd/: BUILD.bazel  ChatClient.cpp  ChatClient.h  ChatMessage.cpp  ChatMessage.h  ChatServer.cpp  ChatServer.h  MessageDB.cpp  MessageDB.h  main.cpp  sqlite.c++.h
ftpd/: .cproject  .project  BUILD.bazel
ftpd/etc/: logins
ftpd/include/: ftpreply.h  tftpclientsocket.h  tftpdatasocket.h  tftplog.h  tftppassivesocket.h  tftpserver.h  tftpserversocket.h  tftpthread.h
ftpd/linux/auth/: LinuxAuthentication.cpp  LinuxAuthentication.h  PAM.cpp  PAM.h
ftpd/linux/filesystem/: LinuxFileSystem.cpp  LinuxFileSystem.h
ftpd/src/: .dep  FTPClient.cpp  FTPClient.h  FTPClientInfo.cpp  FTPClientInfo.h  FTPContext.cpp  FTPContext.h  FTPServer.cpp  FTPServer.h  Makefile  Makefile.win  ftpd  main.cpp  tftpclientsocket.cpp  tftpdatasocket.cpp  tftplog.cpp  tftppassivesocket.cpp  tftpserver.cpp  tftpserversocket.cpp  tftpthread.cpp
ftpd/src/auth/: Authentication.cpp  Authentication.h  AuthenticationImpl.cpp  AuthenticationImpl.h
ftpd/src/factory/: AbstractFTPSocketFactory.h  FTPSSLSocketFactory.cpp  FTPSSLSocketFactory.h  FTPSocketFactory.cpp  FTPSocketFactory.h
ftpd/src/filesystem/: FileSystem.cpp  FileSystem.h  FileSystemImpl.cpp  FileSystemImpl.h  WindowsFileSystem.h
ftpd/src/state/: FTPClientActive.cpp  FTPClientActive.h  FTPClientConnected.cpp  FTPClientConnected.h  FTPClientLoggedIn.cpp  FTPClientLoggedIn.h  FTPClientRename.cpp  FTPClientRename.h  FTPClientState.cpp  FTPClientState.h  FTPClientTransfer.cpp  FTPClientTransfer.h
ftpd/win/auth/: WindowsAuthentication.cpp  WindowsAuthentication.h
ftpd/win/filesystem/: WindowsFileSystem.cpp  WindowsFileSystem.h
httpd/: .cproject  .project  BUILD.bazel  CGIControlThread.cpp  CGIControlThread.h  HTTPClient.cpp  HTTPClient.h  HTTPClientSocket.cpp  HTTPClientSocket.h  HTTPLogger.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPServer.cpp  HTTPServer.h  HTTPServerSocket.cpp  HTTPServerSocket.h  HTTPThread.cpp  LuaControlThread.cpp  LuaControlThread.h  Makefile.am  Services.h  configure.ac  httpd.cpp  json.hpp
httpd/include/: thttpclientsocket.h  thttplog.h  thttpserversocket.h
httpd/src/: Makefile  Makefile.win  main.cpp  thttpclientsocket.cpp  thttplog.cpp  thttpserver.cpp  thttpserversocket.cpp  thttpthread.cpp
libsockets/: .cproject  .project  AbstractClientSocket.cpp  AbstractClientSocket.h  AbstractMultiplexedClientSocket.cpp  AbstractMultiplexedClientSocket.h  AbstractServer.h  AbstractServerSocket.h  AbstractSocket.cpp  AbstractSocket.h  AbstractThread.cpp  BUILD.bazel  ClientSocket.cpp  ClientSocket.h  ClientSocketMultiplexer.cpp  ClientSocketMultiplexer.h  ClientSocketMultiplexerImpl.h  LinuxMultiplexer.h  LinuxSocket.cpp  LinuxSocket.h  LinuxSocketFactory.cpp  LinuxSocketFactory.h  LoggerInterface.h  Makefile.am  MultiplexedClientSocket.cpp  MultiplexedClientSocket.h  MultiplexedServer.cpp  Multiplexer.h  MultiplexerImpl.h  Object.cpp  ServerSocket.cpp  ServerSocket.h  Socket.h  SocketFactory.h  SocketImpl.h  WindowsMultiplexer.cpp  WindowsMultiplexer.h  WindowsSocket.cpp  WindowsSocket.h  WindowsSocketFactory.cpp  (+3 more)
libsockets/include/: libsockets.h  tclientsocket.h  tlogger.h  tmutex.h  tserversocket.h  tsocket.h  tsocketmultiplexer.h  tthread.h  utils.h
libsockets/linux/: LinuxFDFactory.cpp  LinuxFDFactory.h  LinuxMultiplexer.cpp  LinuxMultiplexer.h  LinuxPoll.cpp  LinuxPoll.h  LinuxSelect.cpp  LinuxSelect.h  LinuxSocket.cpp  LinuxSocket.h  LinuxSocketAddress.cpp  LinuxSocketAddress.h  LinuxSocketFactory.cpp  LinuxSocketFactory.h  defs.h
libsockets/linux/Factory/: BUILD.bazel  LinuxFDFactory.cpp  LinuxFDFactory.h  LinuxSocketFactory.cpp  LinuxSocketFactory.h
libsockets/linux/Multiplexer/: BUILD.bazel  LinuxPoll.cpp  LinuxPoll.h  LinuxSelect.cpp  LinuxSelect.h
libsockets/linux/Socket/: BUILD.bazel  LinuxSocket.cpp  LinuxSocket.h  LinuxSocketAddress.cpp  LinuxSocketAddress.h
libsockets/linux/include/: libsockets-no-ssl.h  libsockets.h
libsockets/src/: BUILD.bazel  ClientSocket.cpp  ClientSocket.h  ClosedState.cpp  ClosedState.h  ConnectedState.cpp  ConnectedState.h  DatagramSocket.cpp  DatagramSocket.h  DisconnectedState.cpp  DisconnectedState.h  FDFactory.h  ListeningState.cpp  ListeningState.h  LuaServer.cpp  Makefile.win  MultiplexedClientSocket.h  MultiplexedClients.h  MultiplexedServer.cpp  MultiplexedServer.h  Multiplexer.h  MultiplexerImpl.cpp  MultiplexerImpl.h  OpenSSL.cpp  OpenSSL.h  OpenSSLSocket.cpp  OpenSSLSocket.h  Poll.h  ServerSocket.cpp  ServerSocket.h  Socket.h  SocketAddress.h  SocketFactory.h  SocketImpl.h  SocketState.h  SocketStream.cpp  SocketStream.h  URL.h  libsockets.h  main.cpp  (+9 more)
libsockets/src/ConnectionPool/: BUILD.bazel  ConnectionPool.cpp  ConnectionPool.h  ConnectionPoolImpl.h  MultiplexedConnectionPoolImpl.cpp  MultiplexedConnectionPoolImpl.h  ThreadedConnectionPoolImpl.cpp  ThreadedConnectionPoolImpl.h
libsockets/src/Factory/: FDFactory.h  Poll.h  SocketFactory.cpp  SocketFactory.h  SocketFactoryImpl.h
libsockets/src/Multiplexer/: BUILD.bazel  MultiplexedClientSocket.h  MultiplexedClients.h  Multiplexer.cpp  (+5 more)
libsockets/win/: Util.h  WindowsFDFactory.cpp  WindowsFDFactory.h  WindowsMultiplexer.cpp  WindowsMultiplexer.h  WindowsPoll.cpp  WindowsPoll.h  WindowsSelect.cpp  WindowsSelect.h  WindowsSocket.cpp  WindowsSocket.h  WindowsSocketAddress.cpp  WindowsSocketAddress.h  WindowsSocketFactory.cpp  WindowsSocketFactory.h  defs.h
trunk/libsockets/: .cproject  .project  AbstractClientSocket.cpp  AbstractClientSocket.h  AbstractMultiplexedClientSocket.cpp  AbstractMultiplexedClientSocket.h  AbstractMultiplexerThread.cpp  AbstractMultiplexerThread.h  AbstractServer.cpp  AbstractServer.h  AbstractServerSocket.cpp  AbstractServerSocket.h  AbstractSocket.cpp  AbstractSocket.h  AbstractThread.cpp  AbstractThread.h  ClientSocketMultiplexer.cpp  ClientSocketMultiplexer.h  LoggerInterface.h  Makefile.am  MultiplexedServer.h  Mutex.cpp  Mutex.h  Object.h  configure.ac  libsockets.h
(+271 files in other folders)
