load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "win_defs",
    hdrs = ["win/defs.h"],
    strip_include_prefix = "win",
)

cc_library(
    name = "win_impl",
    deps = ["//libsockets/win/Factory"],
    linkopts = ["ws2_32.lib"],
)

cc_library(
    name = "linux_impl",
    deps = ["//libsockets/linux/Factory"],
)

cc_library(
    name = "linux_defs",
    hdrs = ["linux/defs.h"],
    strip_include_prefix = "linux",
)

cc_library(
    name = "defs",
    # whichever platform you build on, "defs.h" resolves
    deps = select({
        "@bazel_tools//src/conditions:windows": [":win_defs"],
        "//conditions:default": [":linux_defs"],
    }),
)

cc_library(
    name = "impl",
    deps = select({
        "@bazel_tools//src/conditions:windows": [":win_impl"],
        "//conditions:default": [":linux_impl"],
    }),
)
