load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "Multiplexer",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//libsockets:defs",
        "//libsockets/src:sockets",
    ],
    strip_include_prefix = "//libsockets/linux",
)
